Final/tpt.output
Terminals unused in grammar

   '<'
   '>'
   THEN
   WHILE
   FOR_EACH
   LET
   AND
   OR
   NOT
   FUNC
   PROC


Estado 51 conflictos: 1 reducción(ones)/reducción(ones)


Gramática

    0 $accept: aleph $end

    1 aleph: /* vacío */
    2      | aleph stmts EOL

    3 stmts: control
    4      | exp

    5 control: IF '(' cond ')' stmts
    6        | IF '(' cond ')' '{' stmts '}'
    7        | IF '(' cond ')' '{' stmts '}' ELSE '{' stmts '}'

    8 exp: exp UNION exp
    9    | exp INTER exp
   10    | exp DIFF exp
   11    | POP exp
   12    | exp PUSH exp
   13    | CARDINAL exp
   14    | SIZEL exp
   15    | literal_conj
   16    | literal_list
   17    | '(' exp ')'
   18    | ID '=' exp
   19    | ELEM
   20    | ID

   21 cond: exp IN exp

   22 literal_conj: '{' list_elem '}'
   23             | '{' '}'

   24 literal_list: '[' list_elem ']'
   25             | '[' ']'

   26 list_elem: exp ',' list_elem
   27          | exp


Terminales con las reglas donde aparecen

$end (0) 0
'(' (40) 5 6 7 17
')' (41) 5 6 7 17
',' (44) 26
'<' (60)
'=' (61) 18
'>' (62)
'[' (91) 24 25
']' (93) 24 25
'{' (123) 6 7 22 23
'}' (125) 6 7 22 23
error (256)
THEN (258)
ELSE (259) 7
PUSH (260) 12
DIFF (261) 10
INTER (262) 9
UNION (263) 8
POP (264) 11
SIZEL (265) 14
CARDINAL (266) 13
ELEM (267) 19
ID (268) 18 20
WHILE (269)
IF (270) 5 6 7
FOR_EACH (271)
IN (272) 21
LET (273)
EOL (274) 2
AND (275)
OR (276)
NOT (277)
FUNC (278)
PROC (279)


No terminales con las reglas donde aparecen

$accept (35)
    en la izquierda: 0
aleph (36)
    en la izquierda: 1 2, en la derecha: 0 2
stmts (37)
    en la izquierda: 3 4, en la derecha: 2 5 6 7
control (38)
    en la izquierda: 5 6 7, en la derecha: 3
exp (39)
    en la izquierda: 8 9 10 11 12 13 14 15 16 17 18 19 20, en la derecha:
    4 8 9 10 11 12 13 14 17 18 21 26 27
cond (40)
    en la izquierda: 21, en la derecha: 5 6 7
literal_conj (41)
    en la izquierda: 22 23, en la derecha: 15
literal_list (42)
    en la izquierda: 24 25, en la derecha: 16
list_elem (43)
    en la izquierda: 26 27, en la derecha: 22 24 26


estado 0

    0 $accept: . aleph $end

    $default  reduce usando la regla 1 (aleph)

    aleph  ir al estado 1


estado 1

    0 $accept: aleph . $end
    2 aleph: aleph . stmts EOL

    $end      desplazar e ir al estado 2
    POP       desplazar e ir al estado 3
    SIZEL     desplazar e ir al estado 4
    CARDINAL  desplazar e ir al estado 5
    ELEM      desplazar e ir al estado 6
    ID        desplazar e ir al estado 7
    IF        desplazar e ir al estado 8
    '('       desplazar e ir al estado 9
    '{'       desplazar e ir al estado 10
    '['       desplazar e ir al estado 11

    stmts         ir al estado 12
    control       ir al estado 13
    exp           ir al estado 14
    literal_conj  ir al estado 15
    literal_list  ir al estado 16


estado 2

    0 $accept: aleph $end .

    $default  aceptar


estado 3

   11 exp: POP . exp

    POP       desplazar e ir al estado 3
    SIZEL     desplazar e ir al estado 4
    CARDINAL  desplazar e ir al estado 5
    ELEM      desplazar e ir al estado 6
    ID        desplazar e ir al estado 7
    '('       desplazar e ir al estado 9
    '{'       desplazar e ir al estado 10
    '['       desplazar e ir al estado 11

    exp           ir al estado 17
    literal_conj  ir al estado 15
    literal_list  ir al estado 16


estado 4

   14 exp: SIZEL . exp

    POP       desplazar e ir al estado 3
    SIZEL     desplazar e ir al estado 4
    CARDINAL  desplazar e ir al estado 5
    ELEM      desplazar e ir al estado 6
    ID        desplazar e ir al estado 7
    '('       desplazar e ir al estado 9
    '{'       desplazar e ir al estado 10
    '['       desplazar e ir al estado 11

    exp           ir al estado 18
    literal_conj  ir al estado 15
    literal_list  ir al estado 16


estado 5

   13 exp: CARDINAL . exp

    POP       desplazar e ir al estado 3
    SIZEL     desplazar e ir al estado 4
    CARDINAL  desplazar e ir al estado 5
    ELEM      desplazar e ir al estado 6
    ID        desplazar e ir al estado 7
    '('       desplazar e ir al estado 9
    '{'       desplazar e ir al estado 10
    '['       desplazar e ir al estado 11

    exp           ir al estado 19
    literal_conj  ir al estado 15
    literal_list  ir al estado 16


estado 6

   19 exp: ELEM .

    $default  reduce usando la regla 19 (exp)


estado 7

   18 exp: ID . '=' exp
   20    | ID .

    '='  desplazar e ir al estado 20

    $default  reduce usando la regla 20 (exp)


estado 8

    5 control: IF . '(' cond ')' stmts
    6        | IF . '(' cond ')' '{' stmts '}'
    7        | IF . '(' cond ')' '{' stmts '}' ELSE '{' stmts '}'

    '('  desplazar e ir al estado 21


estado 9

   17 exp: '(' . exp ')'

    POP       desplazar e ir al estado 3
    SIZEL     desplazar e ir al estado 4
    CARDINAL  desplazar e ir al estado 5
    ELEM      desplazar e ir al estado 6
    ID        desplazar e ir al estado 7
    '('       desplazar e ir al estado 9
    '{'       desplazar e ir al estado 10
    '['       desplazar e ir al estado 11

    exp           ir al estado 22
    literal_conj  ir al estado 15
    literal_list  ir al estado 16


estado 10

   22 literal_conj: '{' . list_elem '}'
   23             | '{' . '}'

    POP       desplazar e ir al estado 3
    SIZEL     desplazar e ir al estado 4
    CARDINAL  desplazar e ir al estado 5
    ELEM      desplazar e ir al estado 6
    ID        desplazar e ir al estado 7
    '('       desplazar e ir al estado 9
    '{'       desplazar e ir al estado 10
    '}'       desplazar e ir al estado 23
    '['       desplazar e ir al estado 11

    exp           ir al estado 24
    literal_conj  ir al estado 15
    literal_list  ir al estado 16
    list_elem     ir al estado 25


estado 11

   24 literal_list: '[' . list_elem ']'
   25             | '[' . ']'

    POP       desplazar e ir al estado 3
    SIZEL     desplazar e ir al estado 4
    CARDINAL  desplazar e ir al estado 5
    ELEM      desplazar e ir al estado 6
    ID        desplazar e ir al estado 7
    '('       desplazar e ir al estado 9
    '{'       desplazar e ir al estado 10
    '['       desplazar e ir al estado 11
    ']'       desplazar e ir al estado 26

    exp           ir al estado 24
    literal_conj  ir al estado 15
    literal_list  ir al estado 16
    list_elem     ir al estado 27


estado 12

    2 aleph: aleph stmts . EOL

    EOL  desplazar e ir al estado 28


estado 13

    3 stmts: control .

    $default  reduce usando la regla 3 (stmts)


estado 14

    4 stmts: exp .
    8 exp: exp . UNION exp
    9    | exp . INTER exp
   10    | exp . DIFF exp
   12    | exp . PUSH exp

    PUSH   desplazar e ir al estado 29
    DIFF   desplazar e ir al estado 30
    INTER  desplazar e ir al estado 31
    UNION  desplazar e ir al estado 32

    $default  reduce usando la regla 4 (stmts)


estado 15

   15 exp: literal_conj .

    $default  reduce usando la regla 15 (exp)


estado 16

   16 exp: literal_list .

    $default  reduce usando la regla 16 (exp)


estado 17

    8 exp: exp . UNION exp
    9    | exp . INTER exp
   10    | exp . DIFF exp
   11    | POP exp .
   12    | exp . PUSH exp

    $default  reduce usando la regla 11 (exp)


estado 18

    8 exp: exp . UNION exp
    9    | exp . INTER exp
   10    | exp . DIFF exp
   12    | exp . PUSH exp
   14    | SIZEL exp .

    $default  reduce usando la regla 14 (exp)


estado 19

    8 exp: exp . UNION exp
    9    | exp . INTER exp
   10    | exp . DIFF exp
   12    | exp . PUSH exp
   13    | CARDINAL exp .

    $default  reduce usando la regla 13 (exp)


estado 20

   18 exp: ID '=' . exp

    POP       desplazar e ir al estado 3
    SIZEL     desplazar e ir al estado 4
    CARDINAL  desplazar e ir al estado 5
    ELEM      desplazar e ir al estado 6
    ID        desplazar e ir al estado 7
    '('       desplazar e ir al estado 9
    '{'       desplazar e ir al estado 10
    '['       desplazar e ir al estado 11

    exp           ir al estado 33
    literal_conj  ir al estado 15
    literal_list  ir al estado 16


estado 21

    5 control: IF '(' . cond ')' stmts
    6        | IF '(' . cond ')' '{' stmts '}'
    7        | IF '(' . cond ')' '{' stmts '}' ELSE '{' stmts '}'

    POP       desplazar e ir al estado 3
    SIZEL     desplazar e ir al estado 4
    CARDINAL  desplazar e ir al estado 5
    ELEM      desplazar e ir al estado 6
    ID        desplazar e ir al estado 7
    '('       desplazar e ir al estado 9
    '{'       desplazar e ir al estado 10
    '['       desplazar e ir al estado 11

    exp           ir al estado 34
    cond          ir al estado 35
    literal_conj  ir al estado 15
    literal_list  ir al estado 16


estado 22

    8 exp: exp . UNION exp
    9    | exp . INTER exp
   10    | exp . DIFF exp
   12    | exp . PUSH exp
   17    | '(' exp . ')'

    PUSH   desplazar e ir al estado 29
    DIFF   desplazar e ir al estado 30
    INTER  desplazar e ir al estado 31
    UNION  desplazar e ir al estado 32
    ')'    desplazar e ir al estado 36


estado 23

   23 literal_conj: '{' '}' .

    $default  reduce usando la regla 23 (literal_conj)


estado 24

    8 exp: exp . UNION exp
    9    | exp . INTER exp
   10    | exp . DIFF exp
   12    | exp . PUSH exp
   26 list_elem: exp . ',' list_elem
   27          | exp .

    PUSH   desplazar e ir al estado 29
    DIFF   desplazar e ir al estado 30
    INTER  desplazar e ir al estado 31
    UNION  desplazar e ir al estado 32
    ','    desplazar e ir al estado 37

    $default  reduce usando la regla 27 (list_elem)


estado 25

   22 literal_conj: '{' list_elem . '}'

    '}'  desplazar e ir al estado 38


estado 26

   25 literal_list: '[' ']' .

    $default  reduce usando la regla 25 (literal_list)


estado 27

   24 literal_list: '[' list_elem . ']'

    ']'  desplazar e ir al estado 39


estado 28

    2 aleph: aleph stmts EOL .

    $default  reduce usando la regla 2 (aleph)


estado 29

   12 exp: exp PUSH . exp

    POP       desplazar e ir al estado 3
    SIZEL     desplazar e ir al estado 4
    CARDINAL  desplazar e ir al estado 5
    ELEM      desplazar e ir al estado 6
    ID        desplazar e ir al estado 7
    '('       desplazar e ir al estado 9
    '{'       desplazar e ir al estado 10
    '['       desplazar e ir al estado 11

    exp           ir al estado 40
    literal_conj  ir al estado 15
    literal_list  ir al estado 16


estado 30

   10 exp: exp DIFF . exp

    POP       desplazar e ir al estado 3
    SIZEL     desplazar e ir al estado 4
    CARDINAL  desplazar e ir al estado 5
    ELEM      desplazar e ir al estado 6
    ID        desplazar e ir al estado 7
    '('       desplazar e ir al estado 9
    '{'       desplazar e ir al estado 10
    '['       desplazar e ir al estado 11

    exp           ir al estado 41
    literal_conj  ir al estado 15
    literal_list  ir al estado 16


estado 31

    9 exp: exp INTER . exp

    POP       desplazar e ir al estado 3
    SIZEL     desplazar e ir al estado 4
    CARDINAL  desplazar e ir al estado 5
    ELEM      desplazar e ir al estado 6
    ID        desplazar e ir al estado 7
    '('       desplazar e ir al estado 9
    '{'       desplazar e ir al estado 10
    '['       desplazar e ir al estado 11

    exp           ir al estado 42
    literal_conj  ir al estado 15
    literal_list  ir al estado 16


estado 32

    8 exp: exp UNION . exp

    POP       desplazar e ir al estado 3
    SIZEL     desplazar e ir al estado 4
    CARDINAL  desplazar e ir al estado 5
    ELEM      desplazar e ir al estado 6
    ID        desplazar e ir al estado 7
    '('       desplazar e ir al estado 9
    '{'       desplazar e ir al estado 10
    '['       desplazar e ir al estado 11

    exp           ir al estado 43
    literal_conj  ir al estado 15
    literal_list  ir al estado 16


estado 33

    8 exp: exp . UNION exp
    9    | exp . INTER exp
   10    | exp . DIFF exp
   12    | exp . PUSH exp
   18    | ID '=' exp .

    PUSH   desplazar e ir al estado 29
    DIFF   desplazar e ir al estado 30
    INTER  desplazar e ir al estado 31
    UNION  desplazar e ir al estado 32

    $default  reduce usando la regla 18 (exp)


estado 34

    8 exp: exp . UNION exp
    9    | exp . INTER exp
   10    | exp . DIFF exp
   12    | exp . PUSH exp
   21 cond: exp . IN exp

    PUSH   desplazar e ir al estado 29
    DIFF   desplazar e ir al estado 30
    INTER  desplazar e ir al estado 31
    UNION  desplazar e ir al estado 32
    IN     desplazar e ir al estado 44


estado 35

    5 control: IF '(' cond . ')' stmts
    6        | IF '(' cond . ')' '{' stmts '}'
    7        | IF '(' cond . ')' '{' stmts '}' ELSE '{' stmts '}'

    ')'  desplazar e ir al estado 45


estado 36

   17 exp: '(' exp ')' .

    $default  reduce usando la regla 17 (exp)


estado 37

   26 list_elem: exp ',' . list_elem

    POP       desplazar e ir al estado 3
    SIZEL     desplazar e ir al estado 4
    CARDINAL  desplazar e ir al estado 5
    ELEM      desplazar e ir al estado 6
    ID        desplazar e ir al estado 7
    '('       desplazar e ir al estado 9
    '{'       desplazar e ir al estado 10
    '['       desplazar e ir al estado 11

    exp           ir al estado 24
    literal_conj  ir al estado 15
    literal_list  ir al estado 16
    list_elem     ir al estado 46


estado 38

   22 literal_conj: '{' list_elem '}' .

    $default  reduce usando la regla 22 (literal_conj)


estado 39

   24 literal_list: '[' list_elem ']' .

    $default  reduce usando la regla 24 (literal_list)


estado 40

    8 exp: exp . UNION exp
    9    | exp . INTER exp
   10    | exp . DIFF exp
   12    | exp . PUSH exp
   12    | exp PUSH exp .

    DIFF   desplazar e ir al estado 30
    INTER  desplazar e ir al estado 31
    UNION  desplazar e ir al estado 32

    $default  reduce usando la regla 12 (exp)


estado 41

    8 exp: exp . UNION exp
    9    | exp . INTER exp
   10    | exp . DIFF exp
   10    | exp DIFF exp .
   12    | exp . PUSH exp

    $default  reduce usando la regla 10 (exp)


estado 42

    8 exp: exp . UNION exp
    9    | exp . INTER exp
    9    | exp INTER exp .
   10    | exp . DIFF exp
   12    | exp . PUSH exp

    $default  reduce usando la regla 9 (exp)


estado 43

    8 exp: exp . UNION exp
    8    | exp UNION exp .
    9    | exp . INTER exp
   10    | exp . DIFF exp
   12    | exp . PUSH exp

    $default  reduce usando la regla 8 (exp)


estado 44

   21 cond: exp IN . exp

    POP       desplazar e ir al estado 3
    SIZEL     desplazar e ir al estado 4
    CARDINAL  desplazar e ir al estado 5
    ELEM      desplazar e ir al estado 6
    ID        desplazar e ir al estado 7
    '('       desplazar e ir al estado 9
    '{'       desplazar e ir al estado 10
    '['       desplazar e ir al estado 11

    exp           ir al estado 47
    literal_conj  ir al estado 15
    literal_list  ir al estado 16


estado 45

    5 control: IF '(' cond ')' . stmts
    6        | IF '(' cond ')' . '{' stmts '}'
    7        | IF '(' cond ')' . '{' stmts '}' ELSE '{' stmts '}'

    POP       desplazar e ir al estado 3
    SIZEL     desplazar e ir al estado 4
    CARDINAL  desplazar e ir al estado 5
    ELEM      desplazar e ir al estado 6
    ID        desplazar e ir al estado 7
    IF        desplazar e ir al estado 8
    '('       desplazar e ir al estado 9
    '{'       desplazar e ir al estado 48
    '['       desplazar e ir al estado 11

    stmts         ir al estado 49
    control       ir al estado 13
    exp           ir al estado 14
    literal_conj  ir al estado 15
    literal_list  ir al estado 16


estado 46

   26 list_elem: exp ',' list_elem .

    $default  reduce usando la regla 26 (list_elem)


estado 47

    8 exp: exp . UNION exp
    9    | exp . INTER exp
   10    | exp . DIFF exp
   12    | exp . PUSH exp
   21 cond: exp IN exp .

    PUSH   desplazar e ir al estado 29
    DIFF   desplazar e ir al estado 30
    INTER  desplazar e ir al estado 31
    UNION  desplazar e ir al estado 32

    $default  reduce usando la regla 21 (cond)


estado 48

    6 control: IF '(' cond ')' '{' . stmts '}'
    7        | IF '(' cond ')' '{' . stmts '}' ELSE '{' stmts '}'
   22 literal_conj: '{' . list_elem '}'
   23             | '{' . '}'

    POP       desplazar e ir al estado 3
    SIZEL     desplazar e ir al estado 4
    CARDINAL  desplazar e ir al estado 5
    ELEM      desplazar e ir al estado 6
    ID        desplazar e ir al estado 7
    IF        desplazar e ir al estado 8
    '('       desplazar e ir al estado 9
    '{'       desplazar e ir al estado 10
    '}'       desplazar e ir al estado 23
    '['       desplazar e ir al estado 11

    stmts         ir al estado 50
    control       ir al estado 13
    exp           ir al estado 51
    literal_conj  ir al estado 15
    literal_list  ir al estado 16
    list_elem     ir al estado 25


estado 49

    5 control: IF '(' cond ')' stmts .

    $default  reduce usando la regla 5 (control)


estado 50

    6 control: IF '(' cond ')' '{' stmts . '}'
    7        | IF '(' cond ')' '{' stmts . '}' ELSE '{' stmts '}'

    '}'  desplazar e ir al estado 52


estado 51

    4 stmts: exp .
    8 exp: exp . UNION exp
    9    | exp . INTER exp
   10    | exp . DIFF exp
   12    | exp . PUSH exp
   26 list_elem: exp . ',' list_elem
   27          | exp .

    PUSH   desplazar e ir al estado 29
    DIFF   desplazar e ir al estado 30
    INTER  desplazar e ir al estado 31
    UNION  desplazar e ir al estado 32
    ','    desplazar e ir al estado 37

    '}'       reduce usando la regla 4 (stmts)
    '}'       [reduce usando la regla 27 (list_elem)]
    $default  reduce usando la regla 4 (stmts)


estado 52

    6 control: IF '(' cond ')' '{' stmts '}' .
    7        | IF '(' cond ')' '{' stmts '}' . ELSE '{' stmts '}'

    ELSE  desplazar e ir al estado 53

    $default  reduce usando la regla 6 (control)


estado 53

    7 control: IF '(' cond ')' '{' stmts '}' ELSE . '{' stmts '}'

    '{'  desplazar e ir al estado 54


estado 54

    7 control: IF '(' cond ')' '{' stmts '}' ELSE '{' . stmts '}'

    POP       desplazar e ir al estado 3
    SIZEL     desplazar e ir al estado 4
    CARDINAL  desplazar e ir al estado 5
    ELEM      desplazar e ir al estado 6
    ID        desplazar e ir al estado 7
    IF        desplazar e ir al estado 8
    '('       desplazar e ir al estado 9
    '{'       desplazar e ir al estado 10
    '['       desplazar e ir al estado 11

    stmts         ir al estado 55
    control       ir al estado 13
    exp           ir al estado 14
    literal_conj  ir al estado 15
    literal_list  ir al estado 16


estado 55

    7 control: IF '(' cond ')' '{' stmts '}' ELSE '{' stmts . '}'

    '}'  desplazar e ir al estado 56


estado 56

    7 control: IF '(' cond ')' '{' stmts '}' ELSE '{' stmts '}' .

    $default  reduce usando la regla 7 (control)
